# dictionary-client-server

./: .gitignore  .gitkeep  CMakeLists.txt  Makefile  README.md
cmake-btree/: Makefile
cmake-btree/src-lib/: btopn.c
db/: user.bt  user.txt
db/userDict/: 123_dict.bt  dung2_dict.bt  son_dict.bt
db/userGameHis/: dung1_gameHis.txt
db/userHis/: .gitkeep  phungson_his.txt  popo_his.txt  son_his.txt
db/userNote/: dung1_note.bt  dung2_note.bt  son_note.bt
include/client/: auth_controller.h  client.h  extend_controller.h  main_controller.h  note_controller.h  practice_controller.h  utils.h
include/server/: auth_controller.h  extend_controller.h  main_controller.h  note_controller.h  practice_controller.h  server.h  utils.h
lib/: CMakeLists.txt  btn_trans.c  cjset.c  cjset.h  containers.h  cqueue.c  cqueue.h  header.h  jrb.c  order.c
lib/blib/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  client.c  data.c  dict.c  dict.glade  dict.h  init.c  server.c
src/client/: CMakeLists.txt  auth_controller.c  client.c  extend_controller.c  main_controller.c  note_controller.c  practice_controller.c  utils.c
src/data/: init_db.c
src/server/: CMakeLists.txt  auth_controller.c  extend_controller.c  main_controller.c  note_controller.c  practice_controller.c  server.c  utils.c
ui/: #dict-app.glade#  dict-app.glade  dict-app.glade~
